# pocket-scion-synth

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml
boards/: pocket_scion.h  pocket_scion_pico2.h
docs/: architecture.md  banks-and-parameters.md  building.md  controls.md  editor-protocol.md  editor.md  hardware-testing.md  low-articulation.md  multitimbral.md  pico2.md  platform.md  reverse-engineering.md  sam-voice.md
editor/: index.html  package-lock.json  package.json  tsconfig.json
editor/public/: manifest.webmanifest  sw.js
editor/public/versions/: index.html
editor/src/: main.ts  parameters.ts  protocol.test.ts  protocol.ts  style.css
pio/: i2s_tx.pio  rgb_tx.pio
presets/factory-v2.4/: README.md  bank-00-legacy.json  bank-01-foundation.json  bank-02-organic.json  bank-03-percussive.json  bank-04-bass-and-lead.json  bank-05-atmosphere.json  bank-06-spectral.json  bank-07-extreme.json
releases/: SHA256SUMS  pocket_scion_synth_pico2_v2.7.0.uf2  pocket_scion_synth_v2.3.0.uf2  pocket_scion_synth_v2.4.0.uf2  pocket_scion_synth_v2.5.0.uf2  pocket_scion_synth_v2.7.0-sam.uf2  v2.3.0.md  v2.4.0.md  v2.5.0.md  v2.7.0-sam.md
src/: audio_i2s.c  audio_i2s.h  board_pins.h  controls.c  controls.h  display.c  display.h  editor_protocol.c  editor_protocol.h  main.c  midi_uart.c  midi_uart.h  pico2_menu.c  pico2_menu.h  preset_store.c  preset_store.h  raw_capture.c  raw_capture.h  sam_voice.c  sam_voice.h  sensor.c  sensor.h  sensor_math.c  status_rgb.c  status_rgb.h  synth.cpp  synth.h  tusb_config.h  usb_descriptors.c
tests/: test_editor_protocol.c  test_preset_keys.c  test_sensor_math.c
tools/: export_factory_banks.swift
